tests/good/binop/mul.go
package main

import "fmt"

func main() {
	fmt.Print(5*2, "\n")
}

/*
== Expected program output ==
10
*/
